Fixed layout issues with antibody details page. Made responsive.

--- a/src/encoded/static/scss/_main.scss
+++ b/src/encoded/static/scss/_main.scss
@@ -220,17 +220,76 @@ $footerBorder:              #252525 !default;
     //padding: 14px 10px 10px;
 }
 
-//.display-label, .display-values { margin-top: 5px;}
 
 
 
-.data-display .row {margin-top: 12px;}
+/* Data Display - Based on Bootstrap Forms Layout 
+   Used for displaying Read Only data in a form type layout 
+   E.g. Key/value pairs */
 
-.display-label {
+.data-display {
+  // Increase spacing between groups
+  .data-group {
+    margin-bottom: $baseLineHeight;
+    @include clearfix();
+  }
+  // Float the labels left
+  .data-label {
+    float: left;
+    width: $horizontalComponentOffset - 20;
+    padding-top: 5px;
+    text-align: right;
+  }
+  // Move over all input controls and content
+  .data-values {
+    // Super jank IE7 fix to ensure the inputs in .input-append and input-prepend
+    // don't inherit the margin of the parent, in this case .controls
+    *display: inline-block;
+    *padding-left: 20px;
+    margin-left: $horizontalComponentOffset;
+    *margin-left: 0;
+    &:first-child {
+      *padding-left: $horizontalComponentOffset;
+    }
+  }
+  // Move over buttons in .form-actions to align with .controls
+  .form-actions {
+    padding-left: $horizontalComponentOffset;
+  }
+}
+
+.data-group .row {margin-top: 10px;}
+
+.data-label {
   font-weight: bold;
   text-align: right;
 }
-.display-values {
+.data-values {
+	padding-top: 5px;
+	margin-bottom: 5px;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 }
+
+/* Making data displays responsive */
+// UP TO LANDSCAPE PHONE
+
+@media (max-width: 480px) {
+  // Remove the horizontal form styles
+  .data-display {
+    .data-label {
+      float: none;
+      width: auto;
+      padding-top: 0;
+      text-align: left;
+    }
+    // Move over all input controls and content
+    .data-values, label {
+      margin-left: 0;
+      padding-top: 0;
+      margin-bottom: 0;
+    }
+  }
+
+}
+
